--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
 		"start": "node Endabgabe/js/server.js"
 	},
 	"engines": {
-		"node": "7.6.0"
+		"node": ">= 7.6.0"
 	},
 	"dependencies": {
+		"ejs": "2.4.1",
 		"@types/mongodb": "^3.5.20",
 		"mongodb": "^3.5.8"
 	}
