--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
 	"scripts": {
 		"start": "node Endabgabe/js/server.js"
 	},
-	"engines": {
-		"node": "7.6.0"
-	},
 	"dependencies": {
+		"@types/node": "^14.0.5",
 		"@types/mongodb": "^3.5.25",
-		"ejs": "2.4.1",
 		"mongodb": "^3.6.0"
 	}
 }
